use centos:7 instead of centos/devtoolset-6-toolchain-centos7
Signed-off-by: James Fang <54740235@qq.com>

--- a/ci/build_container/Dockerfile-centos
+++ b/ci/build_container/Dockerfile-centos
@@ -1,4 +1,4 @@
-FROM centos/devtoolset-6-toolchain-centos7
+FROM centos:7
 
 COPY ./build_and_install_deps.sh ./target_recipes.bzl ./recipe_wrapper.sh ./Makefile ./build_container_common.sh /
 COPY ./build_recipes/*.sh /build_recipes/
